--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/viesal/seabattle#readme",
   "dependencies": {
+    "css-loader": "^0.28.11",
+    "reset-css": "^3.0.0",
     "static": "^2.0.0",
+    "style-loader": "^0.21.0",
     "webpack": "^3.2.0",
     "webpack-cli": "^2.1.3"
   }
